[package]
name = "fakemap"
version = "0.1.1"
authors = ["Thomas Schaller <me@torkleyy.com>"]
edition = "2018"
description = "Map with Vec implementation, without ordering or hashing (for Serde deserialization)"
license = "Unlicense"
repository = "https://github.com/torkleyy/fakemap"
documentation = "https://docs.rs/fakemap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1" }
