[package]
name = "fakemap"
version = "0.2.1"
authors = ["Thomas Schaller <me@torkleyy.com>"]
edition = "2018"
description = "Map with Vec implementation, without ordering or hashing (for Serde deserialization)"
license = "MIT"
repository = "https://github.com/torkleyy/fakemap"
documentation = "https://docs.rs/fakemap"
readme = "README.md

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1" }

[dev-dependencies]
serde_yaml = "0.8"
